Fix timeseries tool container on mobile being too large

--- a/scss/components/_time-series-tool.scss
+++ b/scss/components/_time-series-tool.scss
@@ -48,7 +48,7 @@
             background: $ship-gray;
 
             @include breakpoint(sm) {
-                width: ($col * 22);
+                width: ($col * 18);
             }
 
             &:after {
